# quant-pea

./: README.md
quant_pea/: pyproject.toml  requirements.txt
quant_pea/app/: dashboard.py
quant_pea/config/: config.yaml
quant_pea/data/: manual_prices_seed.csv
quant_pea/scripts/: run_backtest.py  update_data.py
quant_pea/src/: pipeline.py
quant_pea/src/accounting/: fifo.py
quant_pea/src/backtest/: engine.py
quant_pea/src/data/: database.py  market_data.py
quant_pea/src/factors/: fama_french.py
quant_pea/src/nlp/: sentiment.py
quant_pea/src/optimization/: portfolio.py
quant_pea/src/risk/: models.py
quant_pea/src/signals/: ml_signals.py
quant_pea/src/utils/: config.py  logger.py
