[tool.poetry]
name = "quant-pea"
version = "0.1.0"
description = "Institutional-grade PEA portfolio management system"
authors = ["You"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"

# Data
yfinance = "^0.2"
pandas = "^2.2"
numpy = "^1.26"
duckdb = "^0.10"
pyarrow = "^15"
requests = "^2.31"
beautifulsoup4 = "^4.12"
lxml = "^5"
fredapi = "^0.5"

# Quant / Math
scipy = "^1.12"
statsmodels = "^0.14"
scikit-learn = "^1.4"
xgboost = "^2.0"
lightgbm = "^4.3"
hmmlearn = "^0.3"
arch = "^6"           # GARCH models
numba = "^0.59"       # JIT acceleration

# NLP / Sentiment
transformers = "^4.39"
torch = "^2.2"
sentencepiece = "^0.2"

# Optimization
cvxpy = "^1.4"
riskfolio-lib = "^6"  # HRP, nested clustering

# Visualization & UI
streamlit = "^1.32"
plotly = "^5.20"
matplotlib = "^3.8"
seaborn = "^0.13"

# Excel / PDF
openpyxl = "^3.1"
reportlab = "^4.1"
jinja2 = "^3.1"
weasyprint = "^61"

# Utilities
python-dotenv = "^1.0"
loguru = "^0.7"
pydantic = "^2.6"
tqdm = "^4.66"
joblib = "^1.3"
click = "^8.1"
rich = "^13"
quantstats = "^0.0.62"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-cov = "^4"
black = "^24"
ruff = "^0.3"
mypy = "^1.9"
ipykernel = "^6"
jupyterlab = "^4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
